# manjusaka

./: README.md
.github/workflows/: macos.yaml
libs/botrs-0.2.6/: .cargo_vcs_info.json  .gitignore  CNAME  Cargo.toml  Cargo.toml.orig  README.md  package.json  pnpm-lock.yaml
libs/botrs-0.2.6/docs/: README.md  changelog.md  contributing.md  index.md
libs/botrs-0.2.6/examples/: README.md  config.example.toml  demo_announce.rs  demo_api_permission.rs  demo_at_reply.rs  demo_at_reply_ark.rs  demo_at_reply_command.rs  demo_at_reply_embed.rs  demo_at_reply_file_data.rs  demo_at_reply_keyboard.rs  demo_at_reply_markdown.rs  demo_at_reply_reference.rs  demo_audio_or_live_channel_member.rs  demo_c2c_manage_event.rs  demo_c2c_reply_file.rs  demo_c2c_reply_text.rs  demo_dms_reply.rs  demo_get_reaction_users.rs  demo_group_manage_event.rs  demo_group_reply_file.rs  demo_group_reply_text.rs  demo_guild_member_event.rs  demo_new_message_api.rs  demo_open_forum_event.rs  demo_pins_message.rs  demo_recall.rs  demo_schedule.rs  simple_bot.rs
libs/botrs-0.2.6/src/: api.rs  audio.rs  client.rs  connection.rs  error.rs  forum.rs  gateway.rs  http.rs  (+6 more)
nps/: Cargo.toml  build.rs
nps/src/: main.rs
nps/src/aibot/: memory.rs  mod.rs  openai.rs  skills.rs  utils.rs
nps/src/aibot/tools/: file_read.rs  file_write.rs  get_list.rs  http_get.rs  mod.rs  search.rs  set_id.rs  shell.rs  skill_read.rs
nps/src/bots/: mod.rs  qq.rs  wecom.rs
nps/src/core/: mod.rs  rssh.rs
nps/src/models/: mod.rs  settings.rs
nps/src/npc/: npc1.rs
nps/src/npu/: agent.rs
nps/src/protos/: npc2.rs
(+107 files in other folders)
